--- a/app/templates/explore.html
+++ b/app/templates/explore.html
@@ -31,6 +31,9 @@
           <li class="nav-item">
             <a class="nav-link" href="/cart">Cart</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/login">Account</a>
+          </li>
         </ul>
       </div>
     </nav>
