--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -44,18 +44,20 @@
         <div class="col-md-8">
           <br /><br />
           
-          <h1><strong>Commodities</strong></h1>
-          <p class="text-muted">Discover the current market values of a variety of Commodities.</p>
-          <small>Click on a result to view a timeline of its value:</small>
-          <ul style="margin-top: 10px;" class="list-group">
-            <a style="margin-top: 3px" href="/item?kind=commodities&name=GOLD"><li class="list-group-item"> Gold <span style="margin-left: 15px" class="badge badge-success">Commodities</span> </li></a>
-            <a style="margin-top: 3px" href="/item?kind=commodities&name=OIL"><li class="list-group-item"> Oil <span style="margin-left: 15px" class="badge badge-success">Commodities</span> </li></a>
-            <a style="margin-top: 3px" href="/item?kind=commodities&name=WAGNER"><li class="list-group-item"> T206 Honus Wagner Baseball Card <span style="margin-left: 15px" class="badge badge-success">Commodities</span> </li></a>
-            <a style="margin-top: 3px" href="/item?kind=commodities&name=VALENTINO"><li class="list-group-item"> Ty Beanie Baby - Valentino the Bear <span style="margin-left: 15px" class="badge badge-success">Commodities</span> </li></a>
-            <a style="margin-top: 3px" href="/item?kind=commodities&name=ROMEO"><li class="list-group-item"> 1939 Alfa Romeo 8C 2900B Lungo Spider <span style="margin-left: 15px" class="badge badge-success">Commodities</span> </li></a>
-            <a style="margin-top: 3px" href="/item?kind=commodities&name=MARIO"><li class="list-group-item"> Super Mario 64 - Nintendo 64 <span style="margin-left: 15px" class="badge badge-success">Commodities</span> </li></a>
-            <a style="margin-top: 3px" href="/item?kind=commodities&name=POKEMON"><li class="list-group-item"> Pokemon FireRed - Game Boy Advance <span style="margin-left: 15px" class="badge badge-success">Commodities</span> </li></a>
-          </ul>
+          <h1><strong>Login</strong></h1>
+          <p class="text-muted">Join the network of investors.</p>
+          <form action="/cart">
+            <div class="form-group">
+              <label for="exampleInputEmail1">Email address</label>
+              <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+              <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+            </div>
+            <div class="form-group">
+              <label for="exampleInputPassword1">Password</label>
+              <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+            </div>
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </form>
           <br /> <br />
         </div>
         <div class="col-md-2"></div>
