--- a/app/templates/splash.html
+++ b/app/templates/splash.html
@@ -31,7 +31,9 @@
           <li class="nav-item">
             <a class="nav-link" href="/cart">Cart</a>
           </li>
-
+          <li class="nav-item">
+            <a class="nav-link" href="/login">Account</a>
+          </li>
         </ul>
       </div>
     </nav>
@@ -44,7 +46,18 @@
           
           <h1><strong>Price Tracker</strong></h1>
           <p class="text-muted">Welcome to the CIS 550 Price Tracker! This webapp enables users to view the performance of various blue chip stocks over time, allowing them to observe what type of companies delivered high returns over the last several decades. In addition, they can view the value of various commodities and collectible items and observe how much they increase in value over time. Each user is given $100,000 in 2020 U.S. dollars to create the best mix of stocks and commodities to maximize their long-term return. </p>
-            {{ dbtest|safe }}
+
+          <h2><strong>Information at a glance.</strong></h2>
+          <p class="text-muted">We analyze the financial data for a given asset and present it in a clear objective manner, using open-source technology. </p>
+          <img src="{{ url_for('static',filename='images/chart.png') }}" />
+          <br /><br />
+          
+          <h2><strong>Test your knowledge.</strong></h2>
+          <p class="text-muted">We also curate relevant questions and answers about stocks and commodities for you to test your understanding on the concepts. </p>
+          <img src="{{ url_for('static',filename='images/card.png') }}" />
+          <br /> <br />
+          <h2><strong>Join for free!</strong></h2>
+          <p class="text-muted">Price Tracker is free and it always will be.</p>
         </div>
         <div class="col-md-2"></div>
       </div>
