added new query to explore

--- a/app/templates/itemexplore.html
+++ b/app/templates/itemexplore.html
@@ -181,5 +181,20 @@
       </div>
     </div>
 
+    <div class="card-container">
+      <div class="card">
+        <div class="front">
+          <h2 class="sub-title">Question 10</h2>
+          <h1 class="title">
+            How many times was the share price of {{item_name}} within 10 cents of the share price of {{q10_obj}} (limit 2000)?
+          </h1>
+        </div>
+        <div class="back">
+          <h3 class="synopsis">Answer</h3>
+          <p>The share price of {{item_name}} was 10 cents within the share price of {{q10_obj}} {{q10}} times. </p>
+        </div>
+      </div>
+    </div>
+
   </body>
 </html>
