cleaned up queries

--- a/app/templates/itemexplore.html
+++ b/app/templates/itemexplore.html
@@ -86,7 +86,7 @@
         </div>
         <div class="back">
           <h3 class="synopsis">Answer</h3>
-          <p>When the market reopened after 9/11, {{item_name}} moved {{q3}} percentage points.</p>
+          <p>When the market reopened after 9/11, {{item_name}} move {{q3}} percentage points.</p>
         </div>
       </div>
     </div>
