fixed bug just created

--- a/app/templates/itemexplore.html
+++ b/app/templates/itemexplore.html
@@ -186,12 +186,12 @@
         <div class="front">
           <h2 class="sub-title">Question 10</h2>
           <h1 class="title">
-            How many times was the share price of {{item_name}} the same as the share price of {{q10_obj}}?
+            How many distinct share prices of {{item_name}} were the same as some share price of {{q10_obj}}?
           </h1>
         </div>
         <div class="back">
           <h3 class="synopsis">Answer</h3>
-          <p>The share price of {{item_name}} was the same as the share price of {{q10_obj}} {{q10}} times. </p>
+          <p> {{q10}} distinct prices of {{item_name}} were the same as the share price of {{q10_obj}}. </p>
         </div>
       </div>
     </div>
